# healthcare-claims-intelligence-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py  requirements.txt
data/processed/: dashboard_cohort_analysis.csv  dashboard_cost_drivers.csv  dashboard_member_rollup.csv  dashboard_provider_performance.csv  dashboard_utilization_monthly.csv
data/raw/: claims.csv  members.csv
data/validation/: validation_report.json
models/: model_metrics.json  readmission_model.joblib  sample_prediction_payload.json
src/: __init__.py  pipeline.py
src/api/: __init__.py  main.py  schemas.py
src/data/: __init__.py  build_dashboard_assets.py  generate_synthetic_data.py  load_to_postgres.py  validate_data.py
src/ml/: __init__.py  inference.py  train_model.py
src/sql/: analytics_queries.sql  schema.sql
tests/: test_api.py  test_validation.py
